--- a/index.html
+++ b/index.html
@@ -10,7 +10,63 @@
     <link rel="stylesheet" href="src/css/index.css">
 </head>
 <body id="background">
-    
+    <section id="card_background">
+        <div id="inner_card">
+            <!-- Bagian Foto -->
+            <div id="border_gradient">
+                <img src="src/assets/nisnot.jpg" alt="Foto Profil" id="foto_profil">
+            </div>
+
+            <!-- Bagian Teks -->
+             <div id="area_text">
+                <h1 id="name_card">Nissa Arrumaisha</h1>
+                <h3 id="nim_card">NIM: 2303788</h3>
+                <p id="job_card">Mahasiswa Universitas Pendidikan Indonesia</p>
+             </div>
+
+             <!-- Social Media Button Group Rounded -->
+              <div id="socmed_group">
+                <a class="link_button socmed_button facebook" href="#" target="_blank">
+                    <i class="ph ph-facebook-logo"></i>
+                </a>
+                <a class="link_button socmed_button twitter" href="#" target="_blank">
+                    <i class="ph ph-x-logo"></i>
+                </a>
+                <a class="link_button socmed_button instagram" href="#" target="_blank">
+                    <i class="ph ph-instagram-logo"></i>
+                </a>
+                <a class="link_button socmed_button youtube" href="#" target="_blank">
+                    <i class="ph-fill ph-youtube-logo"></i>
+                </a>
+              </div>
+
+             <!-- Rounded Button -->
+              <div class="button_group">
+                <a class="link_button rounded_button" href="#" target="_blank">Subscribe</a>
+                <a class="link_button rounded_button" href="#" target="_blank">Message</a>
+
+              </div>
+
+             <!-- Like, Comment, Share Button -->
+              <div id="interaction_group_btn">
+                <div class="interact_btn">
+                    <i class="ph ph-heart"></i>
+                    <p>100K</p>
+                </div>
+                <div class="interact_btn">
+                    <i class="ph ph-chat-teardrop"></i>
+                    <p>500K</p>
+                </div>
+                <div class="interact_btn">
+                    <i class="ph ph-share-fat"></i>
+                    <p>22M</p>
+                </div>
+
+              </div>
+
+
+        </div>
+    </section>
 
     
 </body>
